update workflow, change main to master and add print to script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           git commit -am "Grabbed Newest Posts From API" || echo "No changes to commit"
       - name: Push
         run: |
-          git push origin main
+          git push origin master
