--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,24 +12,32 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
+
       - name: Set up Python 3.x
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.12
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r action_requirements.txt
       
-      - name: run database update
+      - name: Run Latest Post Grabber
         run: python get_latest.py
 
-      - name: Commit
+      - name: Configure Git
+        # Essential for committing as GitHub Actions user
         run: |
-          git config --local user.name "${GITHUB_ACTOR}"
-          git config --local user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git commit -am "Grabbed Newest Posts From API" || echo "No changes to commit"
-      - name: Push
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit changes (if any)
         run: |
-          git push origin master
+          git add .
+          git commit -m "Automated update from Python script" || echo "No changes to commit"
+
+      - name: Push changes
+        # Push the committed changes back to the remote repository
+        run: git push
